--- a/index_file/internship.html
+++ b/index_file/internship.html
@@ -8,6 +8,112 @@
   </head>
   <link rel="stylesheet" href="../css3/app.css" />
   <body>
+    <div class="container p-sm-0 p-0">
+      <nav class="navbar navbar-expand-lg bg-white navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Intern Co</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mx-0 mb-2 mb-lg-0">
+              <li class="nav-item me-4">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item me-4">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item me-4 dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Projects
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item me-4">
+                <a class="nav-link" href="#">Our services</a>
+              </li>
+            </ul>
+
+            <ul class="navbar-nav ms-auto flex-row">
+              <li class="nav-item me-3">
+                <a href="#" class="nav-link nav_icons">
+                  <i class="fa-brands fa-facebook text-primary"></i>
+                </a>
+              </li>
+
+              <li class="nav-item me-3">
+                <a href="#" class="nav-link nav_icons">
+                  <i class="fa-brands fa-twitter text-info"></i>
+                </a>
+              </li>
+              <li class="nav-item me-3">
+                <a href="#" class="nav-link nav_icons">
+                  <i class="fa-brands fa-instagram text-danger"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- navbar -->
+
+      <div class="container-fluid">
+        <div class="mainsection">
+          <div class="row justify-content-between">
+            <div class="col-lg-4 col-md-12 col-sm-12">
+              <div class="main_content">
+                <h2 class="hero-title">Join without any Experience</h2>
+                <!-- <h3 class="sec-title">work with professional</h3> -->
+                <p class="main-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Atque, totam ipsum incidunt recusandae ratione harum at quasi
+                  minima earum corporis! Doloremque sit voluptatum velit impedit
+                  nisi minus molestias illo vel.
+                </p>
+                <div class="btn btn-outline-primary w-100 rounded rounded-pill">
+                  Upload Your CV file
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-7 position-relative col-md-12 col-sm-12">
+              <div class="pattern_top d-lg-block d-md-block d-none"></div>
+              <div
+                class="image_bg position-relative d-flex justify-content-center align-items-center"
+              >
+                <img
+                  src="../images/undraw_teamwork_hpdk.png"
+                  alt="..."
+                  class="png d-block position-relative"
+                />
+              </div>
+              <div class="pattern_bottom d-lg-block d-md-block d-none"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="../node_modules/typed.js/lib/typed.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../node_modules/wow.js/dist/wow.js"></script>
