--- a/index_file/internship.html
+++ b/index_file/internship.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>document</title>
   </head>
+  <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css" />
   <link rel="stylesheet" href="../css3/app.css" />
   <body>
     <div class="container p-sm-0 p-0">
@@ -92,6 +93,7 @@
                   minima earum corporis! Doloremque sit voluptatum velit impedit
                   nisi minus molestias illo vel.
                 </p>
+
                 <div class="btn btn-outline-primary w-100 rounded rounded-pill">
                   Upload Your CV file
                 </div>
@@ -114,6 +116,7 @@
         </div>
       </div>
     </div>
+    <!-- <script src="../node_modules/animate.css/animate.css"></script> -->
     <script src="../node_modules/typed.js/lib/typed.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../node_modules/wow.js/dist/wow.js"></script>
